v0.0.2.1/ivy/_sources/docs/functional/ivy/experimental/ivy.functional.ivy.experimental.linear_algebra.rst.txt
Linear algebra
==============


.. autosummary::
   :toctree: linear_algebra
   :template: functional_module.rst
   :hide-table:
   :recursive:

   
   
   
   
   ivy.functional.ivy.experimental.linear_algebra.adjoint
   
   
   ivy.functional.ivy.experimental.linear_algebra.cond
   
   
   ivy.functional.ivy.experimental.linear_algebra.diagflat
   
   
   ivy.functional.ivy.experimental.linear_algebra.dot
   
   
   ivy.functional.ivy.experimental.linear_algebra.eig
   
   
   ivy.functional.ivy.experimental.linear_algebra.eigh_tridiagonal
   
   
   ivy.functional.ivy.experimental.linear_algebra.eigvals
   
   
   ivy.functional.ivy.experimental.linear_algebra.initialize_tucker
   
   
   ivy.functional.ivy.experimental.linear_algebra.khatri_rao
   
   
   ivy.functional.ivy.experimental.linear_algebra.kron
   
   
   ivy.functional.ivy.experimental.linear_algebra.kronecker
   
   
   ivy.functional.ivy.experimental.linear_algebra.make_svd_non_negative
   
   
   ivy.functional.ivy.experimental.linear_algebra.matrix_exp
   
   
   ivy.functional.ivy.experimental.linear_algebra.mode_dot
   
   
   ivy.functional.ivy.experimental.linear_algebra.multi_dot
   
   
   ivy.functional.ivy.experimental.linear_algebra.multi_mode_dot
   
   
   ivy.functional.ivy.experimental.linear_algebra.partial_tucker
   
   
   ivy.functional.ivy.experimental.linear_algebra.svd_flip
   
   
   ivy.functional.ivy.experimental.linear_algebra.truncated_svd
   
   
   ivy.functional.ivy.experimental.linear_algebra.tucker
   




.. automodule:: ivy.functional.ivy.experimental.linear_algebra
   :special-members: __init__
   :show-inheritance:




.. autofunction:: ivy._check_valid_dimension_size

.. autofunction:: ivy._svd_checks

.. autofunction:: ivy._svd_interface

.. autofunction:: ivy.adjoint

.. autofunction:: ivy.cond

.. autofunction:: ivy.diagflat

.. autofunction:: ivy.dot

.. autofunction:: ivy.eig

.. autofunction:: ivy.eigh_tridiagonal

.. autofunction:: ivy.eigvals

.. autofunction:: ivy.initialize_tucker

.. autofunction:: ivy.khatri_rao

.. autofunction:: ivy.kron

.. autofunction:: ivy.kronecker

.. autofunction:: ivy.make_svd_non_negative

.. autofunction:: ivy.matrix_exp

.. autofunction:: ivy.mode_dot

.. autofunction:: ivy.multi_dot

.. autofunction:: ivy.multi_mode_dot

.. autofunction:: ivy.partial_tucker

.. autofunction:: ivy.svd_flip

.. autofunction:: ivy.truncated_svd

.. autofunction:: ivy.tucker







.. discussion-links:: ivy.functional.ivy.experimental.linear_algebra